[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/FarmGrid/FarmGridController.gd" type="Script" id=1]
[ext_resource path="res://TileMaps/farmtiles.res" type="TileSet" id=2]
[ext_resource path="res://Scenes/FarmGrid/TileAdjuster.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="FarmGrid" type="YSort"]
script = ExtResource( 1 )

[node name="Base" type="Node2D" parent="."]
position = Vector2( 0, -64 )
z_as_relative = false

[node name="GroundedItems" type="Node2D" parent="Base"]
position = Vector2( 0, 64 )

[node name="Ground" type="TileMap" parent="Base"]
position = Vector2( 0, 64 )
z_as_relative = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
cell_y_sort = true
format = 1

[node name="Tween" type="Tween" parent="Base"]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="TileAdjuster" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="on_body_enter"]
[connection signal="body_exited" from="Area2D" to="." method="on_body_exit"]
[connection signal="input_event" from="Area2D" to="." method="input_event"]
